--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-cors-headers==4.2.0
 django-extensions==3.2.3
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
-jwt==1.3.1
+PyJWT==2.8.0
 protobuf==4.21.9
 pycparser==2.21
 pytz==2023.3
